# mt5-bridge

./: README.ja.md  README.md  main.py  mcp_server.py  mt5_handler.py  pyproject.toml  requirements.txt
mt5_bridge/: client.py  main.py  mt5_handler.py
