[tool.poetry]
name = "mt5-bridge"
version = "0.1.0"
description = "MT5 Bridge API - REST API and CLI for MetaTrader5"
authors = ["Akiva <akiva@example.com>"]
readme = "README.md"
packages = [{include = "mt5_bridge"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.6.0"
httpx = "^0.27.0"
pandas = "^2.0.0"
fastmcp = "^0.4.1"
MetaTrader5 = {version = "^5.0.0", markers = "sys_platform == 'win32'"}

[tool.poetry.scripts]
mt5-bridge = "mt5_bridge.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
